helm/Tekton/04.Ingress/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-ingress
  namespace: tekton-pipelines
  annotations:
    alb.ingress.kubernetes.io/load-balancer-size: small
    alb.ingress.kubernetes.io/network-type: public
    alb.ingress.kubernetes.io/load-balancer-name: "gm-cicd-tekton"
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /*
        pathType: Prefix
        backend:
          service:
            name: tekton-dashboard
            port:
              number: 9097
